@@ -1006,7 +1006,7 @@
 // Sorcerer
 2443,0,6,4,3,0,0,5,1,yes,0,0,0,magic,0,				SO_FIREWALK,Fire Walk
 2444,0,6,4,4,0,0,5,1,yes,0,0,0,magic,0,				SO_ELECTRICWALK,Electric Walk
-2445,0,6,4,0,0x1,0,5,1,no,0,0,0,none,0,				SO_SPELLFIST,Spell Fist
+//2445,0,6,4,0,0x1,0,5,1,no,0,0,0,none,0,				SO_SPELLFIST,Spell Fist
 2446,9,6,2,2,0,0,5,1,yes,0,0,0,magic,0,				SO_EARTHGRAVE,Earth Grave
 2447,9,6,2,1,0,0,5,1,yes,0,0,0,magic,0,				SO_DIAMONDDUST,Diamond Dust
 2448,9,6,1,5,0,0,5,1,yes,0,0,0,magic,0,				SO_POISON_BUSTER,Poison Buster
